<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:hint="@string/input_ip"
            android:gravity="center"
            android:id="@+id/et_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:gravity="center"
            android:text="5222"
            android:id="@+id/et_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_ok"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:text="@string/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>